web/src/main/java/com/homesnap/webserver/rest/house/parser/UriParser.java
/* Generated By:JavaCC: Do not edit this line. UriParser.java */
package com.homesnap.webserver.rest.house.parser;

/*
 * #%L
 * HomeSnapWebServer
 * %%
 * Copyright (C) 2011 - 2016 A. de Giuli
 * %%
 * This file is part of MyDomo done by A. de Giuli (arnaud.degiuli(at)free.fr).
 * 
 *     MyDomo is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 * 
 *     MyDomo is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 * 
 *     You should have received a copy of the GNU General Public License
 *     along with MyDomo.  If not, see <http://www.gnu.org/licenses/>.
 * #L%
 */

import com.homesnap.webserver.rest.house.MissingParameterRestOperation;
import com.homesnap.webserver.rest.house.MyDomoRestAPI;
import com.homesnap.webserver.rest.house.RestOperationException;
import com.homesnap.webserver.rest.house.UnsupportedRestOperation;

import java.io.ByteArrayInputStream;


public class UriParser implements MyDomoRestAPI, UriParserConstants {
/*
CONTROLLER
[/house/labels/labelId/where || /house/groups/groupId/where || /controllers/where]

Light:
/[on|off] || [?what=on||?what=off]

Automation:
/[up|down|stop] || [?what=up||?what=down||?what=stop]

heating:
/[heating_on||heating_off||...status]/dimension?value || [?what=heating_on||heating_off|| ...] => seule la premiere permet de régler les dimensions!

HOUSE SERVLET

/house																			GET/DELETE
/house/labels																	GET/DELETE
/house/labels/labelId || /house/labels/label?id=id								GET/PUT/POST/DELETE
/house/labels/labelId/where || /house/labels/labelId/controller?id=id			GET/PUT/POST/DELETE
/house/groups																	GET
/house/groups/groupId || /house/groups/group?id=id								GET
/house/groups/groupId/where || /house/groups/groupId/controller?id=id			GET


GET
/house
/house/labels
/house/labels/labelId || /house/labels/label?id=id
/house/labels/labelId/where || /house/labels/labelId/controller?id=id

/house/groups
/house/groups/groupId
/house/groups/groupId/where

POST
/house/labels/labelId (title=Titre)
/house/labels/labelId/where (who=1)


PUT
/house/labels/labelId?title=Titre
/house/labels/labelId/where?who=1

DELETE
/house
/house/labels
/house/labels/labelId || /house/labels/label?id=id
/house/labels/labelId/where || /house/labels/labelId/controller?id=id
*/

        private MyDomoRestAPI listener;

        public static void parse(String uri, MyDomoRestAPI listener) throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation
        {
                UriParser parser = new UriParser(new ByteArrayInputStream(uri.getBytes()));
                parser.listener = listener;
                parser.parseOneLine();
        }

        @Override
        public void onHouse() throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onHouse();
        }

        @Override
        public void onLabelList() throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onLabelList();
        }

        @Override
        public void onLabel(String labelId) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onLabel(labelId);
        }

        @Override
        public void onControllerByLabel(String labelId, String where) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onControllerByLabel(labelId, where);
        }

        @Override
        public void onGroupList() throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onGroupList();
        }

        @Override
        public void onGroup(String groupId) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onGroup(groupId);
        }

        @Override
        public void onControllerByGroup(String groupId, String where) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onControllerByGroup(groupId, where);
        }

        @Override
        public void onController(String where) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onController(where);
        }

  final private void parseOneLine() throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
        Token labelId;
        Token groupId;
        Token where;
    if (jj_2_43(2)) {
      jj_consume_token(16);
      jj_consume_token(HOUSE);
      if (jj_2_40(2)) {
        if (jj_2_37(2)) {
          jj_consume_token(16);
          jj_consume_token(LABELS);
          if (jj_2_11(2)) {
            jj_consume_token(16);
            jj_consume_token(LABEL);
            jj_consume_token(17);
            labelId = jj_consume_token(VALUE);
            if (jj_2_1(2)) {
              parameter2();
                                                                              onLabel(labelId.toString());
            } else if (jj_2_2(2)) {
              jj_consume_token(0);
                                                                         onLabel(labelId.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_12(2)) {
            jj_consume_token(16);
            labelId = jj_consume_token(VALUE);
            if (jj_2_7(2)) {
              jj_consume_token(16);
              where = jj_consume_token(VALUE);
              if (jj_2_3(2)) {
                parameter();
                                                                             onControllerByLabel(labelId.toString(), where.toString());
              } else if (jj_2_4(2)) {
                jj_consume_token(0);
                                                                       onControllerByLabel(labelId.toString(), where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_8(2)) {
              jj_consume_token(16);
              jj_consume_token(CONTROLLER);
              if (jj_2_5(2)) {
                jj_consume_token(17);
                where = jj_consume_token(VALUE);
                                                                                         onControllerByLabel(labelId.toString(), where.toString());
              } else if (jj_2_6(2)) {
                jj_consume_token(16);
                where = jj_consume_token(VALUE);
                                                                                                             onControllerByLabel(labelId.toString(), where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_9(2)) {
              parameter();
                                                       onLabel(labelId.toString());
            } else if (jj_2_10(2)) {
              jj_consume_token(0);
                                                       onLabel(labelId.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_13(2)) {
            jj_consume_token(0);
                                 onLabelList();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else if (jj_2_38(2)) {
          jj_consume_token(16);
          jj_consume_token(GROUPS);
          if (jj_2_24(2)) {
            jj_consume_token(16);
            jj_consume_token(GROUP);
            jj_consume_token(17);
            groupId = jj_consume_token(VALUE);
            if (jj_2_14(2)) {
              parameter2();
                                                                              onGroup(groupId.toString());
            } else if (jj_2_15(2)) {
              jj_consume_token(0);
                                                                         onGroup(groupId.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_25(2)) {
            jj_consume_token(16);
            groupId = jj_consume_token(VALUE);
            if (jj_2_20(2)) {
              jj_consume_token(16);
              where = jj_consume_token(VALUE);
              if (jj_2_16(2)) {
                parameter();
                                                                             onControllerByGroup(groupId.toString(), where.toString());
              } else if (jj_2_17(2)) {
                jj_consume_token(0);
                                                                      onControllerByGroup(groupId.toString(), where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_21(2)) {
              jj_consume_token(16);
              jj_consume_token(CONTROLLER);
              if (jj_2_18(2)) {
                jj_consume_token(17);
                where = jj_consume_token(VALUE);
                                                                                         onControllerByGroup(groupId.toString(), where.toString());
              } else if (jj_2_19(2)) {
                jj_consume_token(16);
                where = jj_consume_token(VALUE);
                                                                                                             onControllerByGroup(groupId.toString(), where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_22(2)) {
              parameter();
                                                       onGroup(groupId.toString());
            } else if (jj_2_23(2)) {
              jj_consume_token(0);
                                                       onGroup(groupId.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_26(2)) {
            jj_consume_token(0);
                                       onGroupList();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else if (jj_2_39(2)) {
          jj_consume_token(16);
          jj_consume_token(CONTROLLERS);
          if (jj_2_35(2)) {
            jj_consume_token(16);
            where = jj_consume_token(VALUE);
            if (jj_2_27(2)) {
              parameter();
                                                             onController(where.toString());
            } else if (jj_2_28(2)) {
              jj_consume_token(0);
                                                       onController(where.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_36(2)) {
            jj_consume_token(16);
            jj_consume_token(CONTROLLER);
            if (jj_2_33(2)) {
              jj_consume_token(17);
              where = jj_consume_token(VALUE);
              if (jj_2_29(2)) {
                parameter2();
                                                                                                      onController(where.toString());
              } else if (jj_2_30(2)) {
                jj_consume_token(0);
                                                                                                 onController(where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_34(2)) {
              jj_consume_token(16);
              where = jj_consume_token(VALUE);
              if (jj_2_31(2)) {
                parameter();
                                                                                                     onController(where.toString());
              } else if (jj_2_32(2)) {
                jj_consume_token(0);
                                                                                                 onController(where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_41(2)) {
        parameter();
                               onHouse();
      } else if (jj_2_42(2)) {
        jj_consume_token(0);
                         onHouse();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_44(2)) {
      jj_consume_token(0);
                 {if (true) return;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void parameter() throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
    jj_consume_token(18);
    label_1:
    while (true) {
      if (jj_2_45(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(VALUE);
      jj_consume_token(19);
      jj_consume_token(VALUE);
      if (jj_2_46(2)) {
        jj_consume_token(20);

      } else if (jj_2_47(2)) {
        jj_consume_token(0);

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void parameter2() throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
    jj_consume_token(20);
    label_2:
    while (true) {
      if (jj_2_48(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(VALUE);
      jj_consume_token(19);
      jj_consume_token(VALUE);
      if (jj_2_49(2)) {
        jj_consume_token(20);

      } else if (jj_2_50(2)) {
        jj_consume_token(0);

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }
